@@ -19,13 +19,13 @@
 <head>
   <meta http-equiv="Content-Language" content="en-us">
   <link rel="stylesheet" type="text/css" href="../stylesheets/style.css">
-  <title>Import Task</title>
+  <title>Include Task</title>
 </head>
 <body>
-  <h2><a name="import">Import</a></h2>
+  <h2><a name="include">Include</a></h2>
   <h3>Description</h3>
   <p>
-    Imports another build file into the current project.
+    Include another build file into the current project.
   </p>
 
   <p>
@@ -36,103 +36,98 @@
   </p>
 
   <p>
-    On execution it will read another Ant file into
-    the same Project. This means that it basically works like the 
-    <a href="http://ant.apache.org/faq.html#xml-entity-include">Entity
-      Includes as explained in the Ant FAQ</a>, as if the imported file was
-    contained in the importing file, minus the top <code>&lt;project&gt;</code>
-    tag.
+    On execution it will read another Ant file into the same Project
+    rewriting the included target names and depends lists.  This is
+    different
+    from <a href="http://ant.apache.org/faq.html#xml-entity-include">Entity
+    Includes as explained in the Ant FAQ</a> in so far as the target
+    names get prefixed by the included project's name or the as
+    attribute and do not appear as if the file was contained in the
+    including file.
   </p>
   <p>
-    The import task may only be used as a top-level task. This means that
+    The include task may only be used as a top-level task. This means that
     it may not be used in a target.
   </p>
   <p>
 There are two further functional aspects that pertain to this task and
 that are not possible with entity includes:
 <ul>
-  <li>target overriding</li>
+  <li>target rewriting</li>
   <li>special properties</li>
 </ul>
   </p>
-<h4>Target overriding</h4>
+<h4>Target rewriting</h4>
 
-<p>If a target in the main file is also present in at least one of the
-imported files, the one from the main file takes precedence.</p>
+<p>Any target in the included file will be renamed
+  to <i>prefix.name</i> where <i>name</i> is the original target's
+  name and <i>prefix</i> is either the value of the <i>as</i>
+  attribute or the <i>name</i> attribute of the <i>project</i> tag of
+  the included file.</p>
 
-<p>So if I import for example a <i>docsbuild.xml</i> file named <b>builddocs</b>,
-that contains a &quot;<b>docs</b>&quot; target, I can redefine it in my main
-buildfile and that is the one that will be called. This makes it easy to
-keep the same target name, so that the overriding target is still called
-by any other targets--in either the main or imported buildfile(s)--for which
-it is a dependency, with a different implementation. The target from <i>docsbuild.xml</i> is
-made available by the name &quot;<b>builddocs</b><b>.docs</b>&quot;.
-This enables the new implementation to call the old target, thus
-<i>enhancing</i> it with tasks called before or after it.</p>
-
-<p>If you use the <i>as</i> attribute of the task, its value will be
-  used to prefix the overriden target's name instead of the name
-  attribute of the project tag.</p>
+<p>The depends attribute of all included targets is rewritten so that
+  all target names are prefixed as well.  This makes the included file
+  self-contained.</p>
 
 <h4>Special Properties</h4>
 
-<p>Imported files are treated as they are present in the main
+<p>Included files are treated as they are present in the main
 buildfile. This makes it easy to understand, but it makes it impossible
 for them to reference files and resources relative to their path.
-Because of this, for every imported file, Ant adds a property that
-contains the path to the imported buildfile. With this path, the
-imported buildfile can keep resources and be able to reference them
+Because of this, for every included file, Ant adds a property that
+contains the path to the included buildfile. With this path, the
+included buildfile can keep resources and be able to reference them
 relative to its position.</p>
 
-<p>So if I import for example a <i>docsbuild.xml</i> file named <b>builddocs</b>,
+<p>So if I include for example a <i>docsbuild.xml</i> file named <b>builddocs</b>,
 I can get its path as <b>ant.file.builddocs</b>, similarly to the <b>ant.file</b>
 property of the main buildfile.</p>
 
 <p>Note that &quot;builddocs&quot; is not the filename, but the name attribute
-present in the imported project tag.</p>
+present in the included project tag.</p>
   <p>
-    If the imported file does not have a name attribute, the ant.file.projectname
+    If the included file does not have a name attribute, the ant.file.projectname
     property will not be set.
   </p>
 
-<h4>Resolving files against the imported file</h4>
+<h4>Resolving files against the included file</h4>
 
-<p>Suppose your main build file called <code>importing.xml</code>
-imports a build file <code>imported.xml</code>, located anywhere on
-the file system, and <code>imported.xml</code> reads a set of
-properties from <code>imported.properties</code>:</p>
+<p>Suppose your main build file called <code>including.xml</code>
+includes a build file <code>included.xml</code>, located anywhere on
+the file system, and <code>included.xml</code> reads a set of
+properties from <code>included.properties</code>:</p>
 
-<pre>&lt;!-- importing.xml --&gt;
-&lt;project name="importing" basedir="." default="..."&gt;
-&nbsp; &lt;import file="${path_to_imported}/imported.xml"/&gt;
+<pre>&lt;!-- including.xml --&gt;
+&lt;project name="including" basedir="." default="..."&gt;
+&nbsp; &lt;include file="${path_to_included}/included.xml"/&gt;
 &lt;/project&gt;
 
-&lt;!-- imported.xml --&gt;
-&lt;project name="imported" basedir="." default="..."&gt;
-&nbsp; &lt;property file="imported.properties"/&gt;
+&lt;!-- included.xml --&gt;
+&lt;project name="included" basedir="." default="..."&gt;
+&nbsp; &lt;property file="included.properties"/&gt;
 &lt;/project&gt;
 </pre>
 
-<p>This snippet however will resolve <code>imported.properties</code>
-against the basedir of <code>importing.xml</code>, because the basedir
-of <code>imported.xml</code> is ignored by Ant. The right way to use
-<code>imported.properties</code> is:</p>
+<p>This snippet however will resolve <code>included.properties</code>
+against the basedir of <code>including.xml</code>, because the basedir
+of <code>included.xml</code> is ignored by Ant. The right way to use
+<code>included.properties</code> is:</p>
 
 <pre>
-&lt;!-- imported.xml --&gt;
-&lt;project name="imported" basedir="." default="..."&gt;
-&nbsp; &lt;dirname property="imported.basedir" file="${ant.file.imported}"/&gt;
-&nbsp; &lt;property file="${imported.basedir}/imported.properties"/&gt;
+&lt;!-- included.xml --&gt;
+&lt;project name="included" basedir="." default="..."&gt;
+&nbsp; &lt;dirname property="included.basedir" file="${ant.file.included}"/&gt;
+&nbsp; &lt;property file="${included.basedir}/included.properties"/&gt;
 &lt;/project&gt;
 </pre>
 
-<p>As explained above <code>${ant.file.imported}</code> stores the
+<p>As explained above <code>${ant.file.included}</code> stores the
 path of the build script, that defines the project called
-<code>imported</code>, (in short it stores the path to
-<code>imported.xml</code>) and <a
+<code>included</code>, (in short it stores the path to
+<code>included.xml</code>) and <a
 href="dirname.html"><code>&lt;dirname&gt;</code></a> takes its
-directory. This technique also allows <code>imported.xml</code> to be
-used as a standalone file (without being imported in other
+directory. This technique also allows <code>included.xml</code> to be
+used as a standalone file (without being included in other
 project).</p>
 
 <h3>Parameters</h3>
@@ -148,8 +143,8 @@ project).</p>
         file
       </td>
       <td valign="top">
-        The file to import. If this is a relative file name, the file name will be resolved
-        relative to the <i>importing</i> file. <b>Note</b>, this is unlike most other
+        The file to include. If this is a relative file name, the file name will be resolved
+        relative to the <i>including</i> file. <b>Note</b>, this is unlike most other
         ant file attributes, where relative files are resolved relative to ${basedir}.
       </td>
       <td valign="top" align="center">Yes</td>
@@ -173,25 +168,26 @@ project).</p>
         ommitted, the name attribute of the project tag of the
         imported file will be used.
       </td>
-      <td valign="top" align="center">No</td>
+      <td valign="top" align="center">Yes, if the included file's
+        project tag doesn't specify a name attribute.</td>
     </tr>
   </tbody>
 </table>
 
 <h3>Examples</h3>
-<pre>&nbsp; &lt;import file=&quot;../common-targets.xml&quot;/&gt;
+<pre>&nbsp; &lt;include file=&quot;../common-targets.xml&quot;/&gt;
 </pre>
 
-<p>Imports targets from the common-targets.xml file that is in a parent
+<p>Includes targets from the common-targets.xml file that is in a parent
 directory.</p>
 
-<pre>&nbsp; &lt;import file=&quot;${deploy-platform}.xml&quot;/&gt;
+<pre>&nbsp; &lt;include file=&quot;${deploy-platform}.xml&quot;/&gt;
 </pre>
 
-<p>Imports the project defined by the property deploy-platform</p>
+<p>Includes the project defined by the property deploy-platform</p>
 
-<h3>How is &lt;import&gt; different
-  from <a href="include.html">&lt;include&gt;</a>?</h3>
+<h3>How is <a href="import.html">&lt;import&gt;</a> different
+  from &lt;include&gt;?</h3>
 
 <p>When using import the imported targets are available by up to two
   names.  Their "normal" name without any prefix and potentially with
