@@ -77,6 +77,7 @@
 <a href="CoreTasks/unpack.html">GUnzip</a><br/>
 <a href="CoreTasks/pack.html">GZip</a><br/>
 <a href="CoreTasks/import.html">Import</a><br/>
+<a href="CoreTasks/include.html">Include</a><br/>
 <a href="CoreTasks/input.html">Input</a><br/>
 <a href="CoreTasks/jar.html">Jar</a><br/>
 <a href="CoreTasks/java.html">Java</a><br/>
