@@ -844,6 +844,11 @@ documentation.</p>
   </tr>
 
   <tr valign="top">
+    <td nowrap><a href="CoreTasks/include.html">Include</a></td>
+    <td><p>Include another build file.</p></td>
+  </tr>
+
+  <tr valign="top">
     <td nowrap><a href="OptionalTasks/javacc.html">JavaCC</a></td>
     <td><p>Invokes the
      <a HREF="http://javacc.dev.java.net/" target="_top">
