@@ -56,6 +56,7 @@ get=org.apache.tools.ant.taskdefs.Get
 gunzip=org.apache.tools.ant.taskdefs.GUnzip
 gzip=org.apache.tools.ant.taskdefs.GZip
 import=org.apache.tools.ant.taskdefs.ImportTask
+include=org.apache.tools.ant.taskdefs.ImportTask
 input=org.apache.tools.ant.taskdefs.Input
 jar=org.apache.tools.ant.taskdefs.Jar
 java=org.apache.tools.ant.taskdefs.Java
